clean code up